# solana-vanity-grinder

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: api.rs  cuda_helpers.rs  main.rs
src/cuda/: vanity_generator.rs  vanity_kernel.cu
