[package]
name = "vanity-grinder"
version = "0.1.0"
edition = "2021"
description = "A high-performance tool for generating Solana vanity addresses using GPU acceleration"

[dependencies]
# Core dependencies
ed25519-dalek = "1.0.1"
rand = "0.8.5"
solana-sdk = "1.16.0"
clap = { version = "4.3", features = ["derive"] }
num_cpus = "1.16.0"
colored = "2.0.0"  # Terminal colors
chrono = "0.4.24"  # For timestamps in filenames
serde = "1.0.159"  # For serializing keypairs
serde_json = "1.0.95"  # For saving keypairs to JSON

# Using CUDA-sys directly for maximum performance
cuda-runtime-sys = { version = "0.3.0-alpha.1" }
cuda-driver-sys = "0.3.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true